Fix bug with horizontal scrolling in Chrome

--- a/app/assets/stylesheets/widgets/visify.css.scss
+++ b/app/assets/stylesheets/widgets/visify.css.scss
@@ -20,6 +20,10 @@
   }
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .budget {
 
   iframe {
